# Vagent

./: .gitignore  PROJECT_DESCRIPTION.md  README.md  pyproject.toml  vertex_agent.py
.claude/: settings.local.json
src/vagent/: cli.py  subagent.py  tools.py
